# gnssr4water

./: .gitignore  README.md  defaultheader.txt  pyproject.toml  setup.py
gnssr4water/core/: gnss.py  logger.py
gnssr4water/fresnel/: fresnelzone.py  geod.py  getorbits.py  iterfresnel.py  plotfresnel.py
gnssr4water/refl/: nmea.py  snr.py
gnssr4water/sites/: skymask.py
src/gnssr4water/: __init__.py
src/gnssr4water/atmo/: formula.py  refraction.py
src/gnssr4water/core/: gnss.py  logger.py
src/gnssr4water/fresnel/: __init__.py  fresnelzone.py  orbits.py  plotfresnel.py
src/gnssr4water/io/: cf.py  nmea.py  nmeastream.py
src/gnssr4water/refl/: models.py  snr.py  waterlevel.py  waterlevelestimator.py
src/gnssr4water/sites/: arc.py  arcbuilder.py  skymask.py
src/gnssrlib/: README.md  gnssrlib_wrap.c  gnssrlib_wrap.pyx
src/gnssrlib/src/: gnssrlib.c  gnssrlib.h  lz4stream.c  lz4stream.h  nmea.c  nmea.h  stream.c  stream.h
styletemplates/: class.txt  fileheader.txt  function.txt
tests/: test_formats.py
