# pyproject.toml  
# This file is part of gnssr4water
# gnssr4water is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 3 of the License, or (at your option) any later version.

# gnssr4water is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.

# You should have received a copy of the GNU Lesser General Public
# License along with gnssr4water if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA

# Author Roelof Rietbroek (r.rietbroek@utwente.nl), 2024

[build-system]
requires = ["setuptools>=61.0","setuptools-scm>=8","Cython>=3","wheel","numpy"]
build-backend = "setuptools.build_meta"
[project]
name = "gnssr4water"
dynamic = ["version"]
authors = [
  { name="Roelof Rietbroek", email="r.rietbroek@utwente.nl"},{name="Lubin Roineau" },
]
description="Python module to work with low-cost GNSS interferometric reflectometry"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Development Status :: 4 - Beta"
]

dependencies = ['numpy','pandas','shapely','matplotlib','astropy','geopandas','pathlib','GDAL','Shapely','cartopy','lz4','pymap3d','xarray >= 2023.1.0','zarr','numba','scipy']

[project.optional-dependencies]


[tool.setuptools_scm]
version_file = "src/gnssr4water/_version.py"

[project.urls]
"Homepage" = "https://github.com/ITC-Water-Resources/gnssr4water"
"Bug Tracker" = "https://github.com/ITC-Water-Resources/gnssr4water/issues"







